<resources>
    <string name="app_name">PregCal</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_lmp">LMP Activity</string>
    <string name="title_between_dates_activity">Between Dates Activity</string>
    <string name="next_date_activity">Next Date Activity</string>
    <string name="text_submit">Submit</string>
    <string name="next_date_name">Next Date</string>
    <string name="next_date_hint">Next Date</string>
    <string name="next_weeks_name">weeks</string>
    <string name="next_weeks_hint">weeks</string>
    <string name="next_days_name">days</string>
    <string name="next_days_hint">days</string>
    <string name="LMP">LMP</string>
    <string name="between_dates">Between Dates</string>
    <string name="next_date">Next Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="lmp_date">LMP Date</string>
    <string name="favourite">favourite</string>
    <string name="refresh">refresh</string>
</resources>
